--- a/Windows/ConditionDetailWindow.xaml
+++ b/Windows/ConditionDetailWindow.xaml
@@ -154,10 +154,18 @@
                         </ContextMenu>
                     </TreeView.ContextMenu>
                     <TreeView.Resources>
+                        <Style x:Key="borderNode" TargetType="Border">
+                            <Setter Property="BorderBrush" Value="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" />
+                            <Setter Property="BorderThickness" Value="1" />
+                            <Setter Property="Margin" Value="0, 2, 0, 2" />
+                            <Setter Property="Padding" Value="5, 5, 10, 5" />
+                        </Style>
+                        
                         <HierarchicalDataTemplate DataType="{x:Type local:GroupConditionNodeVO}" ItemsSource="{Binding Conditions}">
-                            <Border BorderBrush="{x:Static SystemParameters.WindowGlassBrush}" BorderThickness="1">
+                            <Border Style="{StaticResource borderNode}">
                                 <StackPanel Orientation="Horizontal">
-                                    <ComboBox ItemsSource="{StaticResource GroupMatchModes}" SelectedValue="{Binding MatchMode}">
+                                    <ComboBox Margin="0, 0, 10, 0"
+                                        ItemsSource="{StaticResource GroupMatchModes}" SelectedValue="{Binding MatchMode}">
                                         <ComboBox.ItemTemplate>
                                             <DataTemplate>
                                                 <TextBlock Text="{Binding Converter={StaticResource MatchModeToStringConverter}}" />
@@ -172,7 +180,7 @@
                         </HierarchicalDataTemplate>
                         
                         <DataTemplate DataType="{x:Type local:FieldConditionNodeVO}">
-                            <Border BorderBrush="{x:Static SystemParameters.WindowGlassBrush}" BorderThickness="1">
+                            <Border Style="{StaticResource borderNode}">
                                 <StackPanel Orientation="Horizontal">
                                     <Label Name="lblKey" Content="Key" />
                                     <TextBox Name="txtBxKey" MinWidth="100" MaxWidth="200" Margin="0, 0, 10, 0" Text="{Binding FieldKey}" />
