--- a/Windows/ConditionDetailWindow.xaml
+++ b/Windows/ConditionDetailWindow.xaml
@@ -67,10 +67,18 @@
             </Style>
         </ResourceDictionary>
     </Window.Resources>
-    <StackPanel Orientation="Vertical">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        
         <RadioButton Name="rdBtnSingle" Grid.Row="0" Content="Use single field condtion" 
                      GroupName="condition" Checked="RdBtnCondition_Checked" />        
-        <GroupBox Name="grpBxSingleField" Header="Single Field">
+        <GroupBox Name="grpBxSingleField" Grid.Row="1" Header="Single Field">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -81,11 +89,17 @@
             </Grid>
         </GroupBox>
 
-        <RadioButton Name="rdBtnMultiple" Content="Use multiple field condtion"
+        <RadioButton Name="rdBtnMultiple" Grid.Row="2" Content="Use multiple field condtion"
                      GroupName="condition" Checked="RdBtnCondition_Checked" />
-        <GroupBox Name="grpBxMultipleField" Header="Multiple Field">
-            <StackPanel>
-                <Grid>
+        <GroupBox Name="grpBxMultipleField" Grid.Row="3" Header="Multiple Field">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                
+                <Grid Name="grdConditionName" Grid.Row="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
@@ -105,7 +119,7 @@
                     </TextBox>
                 </Grid>
 
-                <Grid>
+                <Grid Name="grdConditionButtons" Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
@@ -133,15 +147,15 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Button Name="btnAddField" Grid.Column="0" Width="20" Content="➕" Command="{Binding Path=AddFieldCommand}" />
-                        <Button Name="btnAddGroup" Grid.Column="1" Width="30" Content="➕{}" Command="{Binding Path=AddGroupCommand}" />
-                        <Button Name="btnRemove" Grid.Column="2" Width="20" Content="➖" Command="{Binding Path=RemoveCommand}" />
+                        <Button Name="btnAddField" Grid.Column="0" Width="20" Content="➕" ToolTip="Add Field" Command="{Binding Path=AddFieldCommand}" />
+                        <Button Name="btnAddGroup" Grid.Column="1" Width="30" Content="➕{}" ToolTip="Add Group" Command="{Binding Path=AddGroupCommand}" />
+                        <Button Name="btnRemove" Grid.Column="2" Width="20" Content="➖" ToolTip="Remove" Command="{Binding Path=RemoveCommand}" />
                         <Button Name="btnMoveUp" Grid.Column="3"  Width="20" Content="↑" ToolTip="Move Up" Command="{Binding Path=MoveUpCommand}" />
                         <Button Name="btnMoveDown" Grid.Column="4"  Width="20" Content="↓" ToolTip="Move Down" Command="{Binding Path=MoveDownCommand}" />
                     </Grid>
                 </Grid>
 
-                <TreeView Name="trConditions" MinHeight="50" SelectedItemChanged="TrConditions_SelectedItemChanged" MouseDown="TrConditions_MouseDown">
+                <TreeView Name="trConditions" Grid.Row="2" MinHeight="50" SelectedItemChanged="TrConditions_SelectedItemChanged" MouseDown="TrConditions_MouseDown">
                     <TreeView.ContextMenu>
                         <ContextMenu>
                             <MenuItem Header="Cut" Icon="✂" Command="{Binding Path=CutCommand}" />
@@ -211,10 +225,10 @@
                         </Style>
                     </TreeView.ItemContainerStyle>
                 </TreeView>
-            </StackPanel>
+            </Grid>
         </GroupBox>
 
-        <Grid>
+        <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
@@ -222,5 +236,5 @@
 
             <Button Name="btnSave" Grid.Column="1" Content="Save" Click="BtnSave_Click" />
         </Grid>
-    </StackPanel>
+    </Grid>
 </Window>
