--- a/Resources/StyleDictionary.xaml
+++ b/Resources/StyleDictionary.xaml
@@ -2,7 +2,19 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="Button">
-        <Setter Property="Margin" Value="2" />
+        <Style.Setters>
+            <Setter Property="Margin" Value="2" />
+        </Style.Setters>
+    </Style>
+
+    <Style x:Key="buttonNormal" TargetType="Button">
+        
+    </Style>
+    
+    <Style x:Key="buttonCommon" TargetType="Button">
+        <Style.Setters>
+            <Setter Property="Margin" Value="2" />
+        </Style.Setters>
     </Style>
 
     <Style TargetType="TextBox">
