--- a/Windows/Controls/ExecutionListView.xaml
+++ b/Windows/Controls/ExecutionListView.xaml
@@ -4,23 +4,43 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance Type=local:ExecutionListViewDataContextVO}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        <ListView Name="lstExecutions" MinHeight="30">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        
+        <ListView Name="lstExecutions" Grid.Row="0" MinHeight="30"
+                  SelectionChanged="LstExecutions_SelectionChanged"
+                  MouseDown="LstExecutions_MouseDown">
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Stop" Icon="□" Command="{Binding Path=StopCommand}" />
+                </ContextMenu>
+            </ListView.ContextMenu>
+            
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                </Style>
+            </ListView.ItemContainerStyle>
+            
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Grid.Column="0" Text="{Binding Name}" />
-                        <Button Name="btnStop" Grid.Column="1" Width="20" Content="□" Tag="{Binding Name}" Click="BtnStop_Click" />
+                        <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="{Binding Name}" />
+                        <Button Name="btnStop" Grid.Column="2" Width="20" Content="□" Tag="{Binding Name}" Click="BtnStop_Click" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-    </StackPanel>
+    </Grid>
 </UserControl>
