--- a/Windows/Controls/TerminalView.xaml
+++ b/Windows/Controls/TerminalView.xaml
@@ -61,17 +61,25 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <Expander Name="expanderFind" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0" Header="Find" IsExpanded="True">
+            <Expander Name="expanderFind" Grid.RowSpan="3" Grid.ColumnSpan="2" Panel.ZIndex="0" Header="Find" IsExpanded="True">
                 <controls:FilterListView x:Name="findConditionListView" />
             </Expander>
 
-            <Grid Name="gridFindButton" Grid.Row="1" Grid.Column="1" Panel.ZIndex="1">
+            <StackPanel Name="gridFindResult" Grid.Row="1" Grid.Column="1" Panel.ZIndex="1" 
+                        HorizontalAlignment="Right" Orientation="Horizontal">
+                <Label Content="{Binding FoundSelectedNumber}" />
+                <Label Content="/" />
+                <Label Content="{Binding FoundCount}" />
+            </StackPanel>
+
+            <Grid Name="gridFindButton" Grid.Row="2" Grid.Column="1" Panel.ZIndex="1">
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
