--- a/Windows/Controls/ConditionListView.xaml
+++ b/Windows/Controls/ConditionListView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="TerminalMonitor.Windows.Controls.FilterListView"
+﻿<UserControl x:Class="TerminalMonitor.Windows.Controls.ConditionListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=local:FilterListViewDataContextVO}"
+             d:DataContext="{d:DesignInstance Type=local:ConditionListViewDataContextVO}"
              d:DesignHeight="150" d:DesignWidth="800">
     <Grid>
         <Grid.Resources>
@@ -128,9 +128,9 @@
 
         </StackPanel>
         
-        <ListView Name="lstFilters" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="3" MinHeight="20"
-                  SelectionChanged="LstFilters_SelectionChanged"
-                  MouseDown="LstFilters_MouseDown" MouseDoubleClick="LstFilters_MouseDoubleClick">
+        <ListView Name="lstConditions" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="3" MinHeight="20"
+                  SelectionChanged="LstConditions_SelectionChanged"
+                  MouseDown="LstConditions_MouseDown" MouseDoubleClick="LstConditions_MouseDoubleClick">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="Edit" Icon="✏" Command="{Binding Path=EditCommand}" />
