--- a/Windows/Controls/TerminalView.xaml
+++ b/Windows/Controls/TerminalView.xaml
@@ -50,7 +50,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <controls:FilterListView x:Name="filterConditionListView" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0" />
+                <controls:ConditionListView x:Name="filterConditionListView" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0" />
 
                 <Button Name="buttonFilter" Grid.Row="1" Grid.Column="1" Panel.ZIndex="1" Content="Filter" Click="ButtonFilter_Click" />
             </Grid>
@@ -70,7 +70,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <controls:FilterListView x:Name="findConditionListView" Grid.RowSpan="3" Grid.ColumnSpan="2" Panel.ZIndex="0" />
+                <controls:ConditionListView x:Name="findConditionListView" Grid.RowSpan="3" Grid.ColumnSpan="2" Panel.ZIndex="0" />
 
 
                 <StackPanel Name="gridFindResult" Grid.Row="1" Grid.Column="1" Panel.ZIndex="1" 
